kubernetes/applications/ntfy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  namespace: ntfy
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - ntfy.apps.lab.sirnotethan.uk
      secretName: apps-prod-wildcard-tls
  rules:
    - host: ntfy.apps.lab.sirnotethan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ntfy
                port:
                  number: 80
